k8s/base/namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
